--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Тестовый проект для экспериментов над Yii :) 
+п»їРўРµСЃС‚РѕРІС‹Р№ РїСЂРѕРµРєС‚ РґР»СЏ СЌРєСЃРїРµСЂРёРјРµРЅС‚РѕРІ РЅР°Рґ Yii :) 
 
 Yii Web Programming Framework
 =============================
